[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanitts-vllm"
version = "1.0.0"
description = "High-performance TTS with vLLM, OpenAI-compatible API, FlashSR upsampling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "vllm>=0.3.0",
    "transformers>=4.57.1",
    "nemo-toolkit[tts]>=2.4.0",
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "inflect>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["audio", "generation", "utils"]
